# rust_api

./: Cargo.toml  package-lock.json  package.json  serverless.yml
.github/workflows/: main.yml
src/: docx.rs  main.rs
src/mock/: request.json
src/mock/formatted/: request.json
